--- a/reflections/pages/moral-choice/read.html
+++ b/reflections/pages/moral-choice/read.html
@@ -13,7 +13,6 @@
   <title>The Moral Choice of Duality -- Solitude Reflections · Ninox Antolihao</title>
 
   <meta name="description" content="A reflection on contrast, moral restraint, and why true goodness requires the capacity to do harm and the decision not to." />
-
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/moral-choice/read.html" />
 
   <!-- Open Graph -->
@@ -22,17 +21,22 @@
   <meta property="og:description" content="True goodness requires the capacity to do harm and the decision not to." />
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/moral-choice/moralchoice.jpg" />
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/moral-choice/read.html" />
-
   <meta name="twitter:card" content="summary_large_image" />
 
   <link rel="icon" href="/reflections/assets/favicon.ico" />
 
-  <!-- Unified header assets -->
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=20" />
-  <script defer src="/reflections/assets/reflections-header.js?v=20"></script>
+  <!-- =========================================================
+    ✅ FIX 1: Bump versions to break cache
+    (Change v=21 to any new number when you update files)
+  ========================================================== -->
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21" />
+  <script defer src="/reflections/assets/reflections-header.js?v=21"></script>
 
-  <!-- Optional site styles -->
-  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
+  <!-- =========================================================
+    ✅ FIX 2: Use your real latest reflections.css (NOT v=1)
+    If your latest is different, set it here.
+  ========================================================== -->
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=19" />
 
   <style>
     :root{
@@ -141,6 +145,9 @@
       border-radius:14px;
       border:1px solid rgba(255,255,255,.08);
       background:rgba(0,0,0,.15);
+
+      /* ✅ FIX 3: prevent global css from hiding it */
+      display:block !important;
     }
 
     .audio-title{
@@ -149,7 +156,10 @@
       color:var(--muted);
     }
 
-    audio{ width:100%; }
+    audio{
+      width:100%;
+      display:block !important; /* ✅ FIX 3 */
+    }
 
     .tracklist{
       margin:.75rem 0 0;
@@ -221,6 +231,16 @@
 <body>
   <!-- ✅ Unified fixed header mount (JS builds the header) -->
   <div id="reflectionsHeader" data-current="moral-choice"></div>
+
+  <!-- ✅ FIX 4: If header JS fails to load, show a minimal fallback header -->
+  <noscript>
+    <div style="position:fixed;top:0;left:0;right:0;z-index:9999;background:#201612;color:#f3e6dd;padding:12px 14px;border-bottom:1px solid rgba(255,255,255,.12)">
+      Solitude Reflections — The Moral Choice of Duality
+      <span style="float:right">
+        <a href="/reflections/index.html" style="color:#ffb873;text-decoration:none">Home</a>
+      </span>
+    </div>
+  </noscript>
 
   <main>
     <article class="paper">
@@ -495,7 +515,7 @@
 
     // Service Worker (optional)
     if ("serviceWorker" in navigator) {
-      navigator.serviceWorker.register("/reflections/service-worker.js").catch(()=>{});
+      navigator.serviceWorker.register("/reflections/service-worker.js?v=21").catch(()=>{});
     }
   </script>
 </body>
