--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -7,53 +7,498 @@
   <title>Unraveling the Enigma of Absolute Truth — Solitude Reflections</title>
   <meta name="description" content="A philosophical journey from transcendence to Absolute Reality." />
 
+ <!-- Disclaimer -->
+  <meta name="description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
+  <meta property="og:description" content="The ideas expressed here are personal opinions and interpretations. They are not official references, factual sources, or professional advice.">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="article">
+  <meta property="og:title" content="TRANSCENDENCE -Unwraveling the enigma of transcendence">
+  <meta property="og:image" content="transcendence.jpg">
+  <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/transcendence/read.html">
+
+  <!-- Main reflections styles -->
+  <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
   <link rel="icon" href="/reflections/assets/favicon.ico">
+  <style>
+    /* =========================
+       GLOBAL FIXED HEADER
+    ========================== */
+    .ref-header {
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      z-index: 1000;
+      background: #1f1815;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.06);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.35);
+    }
 
-  <!-- Social Preview -->
-  <meta property="og:title" content="Unraveling the Enigma of Absolute Truth">
-  <meta property="og:description" content="From imperfection, causation, and subjectivity to the paradox of the Absolute.">
-  <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/transcendence/transcendence.png">
+    .ref-header-inner {
+      max-width: 1100px;
+      margin: 1 auto;
+      padding: 0.8rem 1rem; /* slightly taller header */
+      display: flex;
+      align-items: center;
+      gap: 1rem;
+    }
 
-  <!-- Global Assets -->
-  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=19">
-  <script src="/reflections/assets/audio-system.js?v=14"></script>
-  <link rel="manifest" href="/reflections/manifest.json?v=3">
+    /* top-left cluster */
+    .ref-header-left {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 0.35rem;
+    }
+
+    /* Brand / logo */
+    .brand-link {
+      display: flex;
+      align-items: center;
+      gap: 0.55rem;
+      text-decoration: none;
+    }
+
+    .brand-logo {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+      flex-shrink: 0;
+    }
+
+    /* kept in case brand-mark used elsewhere */
+    .brand-mark {
+      width: 32px;
+      height: 32px;
+      border-radius: 50%;
+      border: 1px solid #ff6b3d;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 0.9rem;
+      color: #ff6b3d;
+    }
+
+    .brand-text {
+      display: flex;
+      flex-direction: column;
+      line-height: 1.1;
+    }
+
+    .brand-title {
+      font-size: 0.9rem;
+      font-weight: 600;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+      color: #ffffff;
+    }
+
+    .brand-subtitle {
+      font-size: 0.7rem;
+      color: #f0e0d0;
+      opacity: 0.8;
+    }
+
+    /* Under-logo actions: hamburger + local nav buttons */
+    .header-actions {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+    }
+
+    /* Nav */
+    .ref-nav {
+      margin-left: 1rem;
+      flex: 1;
+    }
+
+    .ref-nav ul {
+      display: flex;
+      gap: 0.75rem;
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    .ref-nav a {
+      display: inline-flex;
+      align-items: center;
+      padding: 0.35rem 0.7rem;
+      border-radius: 999px;
+      font-size: 0.8rem;
+      text-decoration: none;
+      color: #f3e4d5;
+      border: 1px solid transparent;
+      white-space: nowrap;
+      transition: background 0.2s ease, color 0.2s ease, border-color 0.2s ease;
+    }
+
+    .ref-nav a:hover {
+      background: rgba(255, 107, 61, 0.14);
+      border-color: rgba(255, 107, 61, 0.4);
+    }
+
+    .ref-nav a.active {
+      background: #ff6b3d;
+      color: #1f1815;
+      border-color: #ff6b3d;
+      font-weight: 600;
+    }
+
+    /* Right side of header */
+    .ref-header-right {
+      display: flex;
+      align-items: center;
+      gap: 0.75rem;
+    }
+
+    .current-page-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.4rem;
+      padding: 0.3rem 0.7rem;
+      border-radius: 999px;
+      background: rgba(255, 255, 255, 0.05);
+      border: 1px solid rgba(255, 255, 255, 0.15);
+      font-size: 0.75rem;
+      color: #f7e9dd;
+    }
+
+    .page-icon {
+      font-size: 0.85rem;
+      color: #ffb347;
+    }
+
+    /* Hamburger button */
+    .nav-toggle {
+      display: none; /* hidden on desktop, shown in mobile via media query */
+      border: 1px solid rgba(255, 255, 255, 0.18);
+      background: rgba(255, 255, 255, 0.06);
+      border-radius: 999px;
+      padding: 0.25rem 0.6rem;
+      font-size: 1rem;
+      color: #e8d9c5;
+      cursor: pointer;
+      transition: background 0.2s ease, border-color 0.2s ease, transform 0.15s ease;
+    }
+
+    .ref-header.nav-open .nav-toggle {
+      background: rgba(255, 107, 61, 0.12);
+      border-color: rgba(255, 107, 61, 0.45);
+      transform: translateY(0.2px);
+    }
+
+    /* Local nav buttons (Back / Share / Audio) */
+    .nav-buttons {
+      display: flex;
+      gap: 0.4rem;
+    }
+
+    .nav-buttons button {
+      background: #26201c;
+      color: #fff;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      padding: 4px 10px;
+      border-radius: 999px;
+      font-size: 0.75rem;
+      cursor: pointer;
+      white-space: nowrap;
+    }
+
+    .nav-buttons button:hover {
+      background: #ff6b3d;
+      border-color: #ff6b3d;
+      color: #1f1815;
+    }
+
+    /* Main layout */
+    .page-content {
+      max-width: 1100px;
+      margin: 0 auto;
+      padding: 5rem 1rem 2rem; /* header space */
+    }
+
+    /* Softer overlay (visual only, never blocks) */
+    .nav-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.25);
+      z-index: 500; /* below header(1000), above content */
+      opacity: 0;
+      pointer-events: none; /* key: never blocks */
+      transition: opacity 0.25s ease;
+    }
+
+    .ref-header.nav-open .nav-overlay {
+      opacity: 1;
+      /* pointer-events stays none */
+    }
+
+    /* =========================
+       RESPONSIVE
+    ========================== */
+
+    @media (max-width: 900px) {
+      .brand-subtitle {
+        display: none;
+      }
+
+      .ref-nav ul {
+        gap: 0.4rem;
+      }
+
+      .ref-nav a {
+        padding: 0.25rem 0.55rem;
+        font-size: 0.75rem;
+      }
+
+      .current-page-badge {
+        display: none;
+      }
+    }
+
+    @media (max-width: 768px) {
+      .ref-header-inner {
+        flex-wrap: nowrap;
+        align-items: flex-start;
+      }
+
+      .ref-nav {
+        position: fixed;
+        top: 64px; /* below header */
+        left: 0;
+        right: 0;
+        background: rgba(31, 24, 21, 0.96);
+        border-bottom: 1px solid rgba(255, 255, 255, 0.08);
+        max-height: 0;
+        overflow: hidden;
+        transition: max-height 0.25s ease;
+        margin-left: 0;
+      }
+
+      .ref-nav ul {
+        flex-direction: column;
+        padding: 0.5rem 1rem 0.8rem;
+        gap: 0.25rem;
+      }
+
+      .ref-nav a {
+        width: 100%;
+        justify-content: flex-start;
+      }
+
+      .ref-header.nav-open .ref-nav {
+        max-height: 260px;
+      }
+
+      .nav-toggle {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .page-content {
+        padding-top: 7rem;
+      }
+    }
+
+    /* =========================
+       PAGE-SPECIFIC STYLES
+    ========================== */
+
+    .content {
+      padding: 0 0 2rem 0;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+      line-height: 1.65;
+      font-size: 17px;
+    }
+
+    /* Scrolling subtitle under local title */
+    .scrolling-subtitle {
+      width: 100%;
+      overflow: hidden;
+      white-space: nowrap;
+      position: relative;
+      margin-top: 6px;
+      color: #444;
+      font-size: 14px;
+    }
+
+    .scrolling-subtitle span {
+      display: inline-block;
+      animation: smoothScroll 18s linear infinite;
+    }
+
+    @keyframes smoothScroll {
+      0% { transform: translateX(100%); }
+      30% { transform: translateX(0); }
+      100% { transform: translateX(-100%); }
+    }
+
+    /* =========================
+       AUDIO PLAYLIST (tighter)
+    ========================== */
+    .audio-wrap {
+      max-width: 800px;
+      margin: 1.2rem auto 1.2rem auto;
+      padding: 0.85rem 0.75rem;
+      border-radius: 16px;
+      background:#261a15;
+      border: 3px solid rgba(101, 55, 14, 1);
+    }
+
+    #reflectionAudio {
+      width: 100%;
+      display: block;
+    }
+
+    .playlist {
+      margin-top: 0.9rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.4rem;
+    }
+
+    .playlist-row {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 0.55rem 0.55rem;
+      background: #261a15;
+      border-radius: 8px;
+      cursor: pointer;
+      border: 1.5px solid #120d09;
+      transition: background 0.15s ease, border-color 0.15s ease, color 0.15s ease;
+    }
+
+    .playlist-row:hover {
+      border-color: #42251c;
+    }
+
+    .playlist-row.active {
+      background: #170d09;
+      border-color: #997060;
+      box-shadow: 0 0 2px rgba(255, 0, 0, 0.4);
+    }
+
+    .playlist-main {
+      display: flex;
+      flex-direction: column;
+      gap: 0rem;
+      overflow: hidden;
+    }
+
+    .playlist-title {
+      font-size: 0.96rem;
+      font-weight: 600;
+      color: #f3e6dd;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .playlist-sub {
+      font-size: 0.78rem;
+      color: #b29587;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+
+    .playlist-duration {
+      font-size: 0.82rem;
+      color: #c9b0a4;
+      margin-left: 0.75rem;
+      flex-shrink: 0;
+    }
+  </style>
+
+  <!-- Service Worker -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      navigator.serviceWorker.register('/reflections/sw.js');
+    }
+  </script>
 </head>
 
 <body>
+  <!-- FIXED GLOBAL HEADER -->
+  <header class="ref-header">
+    <div class="ref-header-inner">
 
-<!-- ===== HEADER ===== -->
-<header class="ref-header">
-  <div class="ref-header-inner">
-    <a class="ref-brand" href="/reflections/">
-      <img src="/reflections/assets/logo.png" alt="Solitude Reflections" class="ref-brand-logo">
-      <div>
-        <div class="ref-brand-title">Solitude Reflections</div>
-        <div class="ref-brand-sub">Stone Grill Press</div>
+      <!-- Left brand + hamburger + local buttons -->
+      <div class="ref-header-left">
+        <a href="/reflections/index.html" class="brand-link">
+          <img src="/reflections/assets/logo1.PNG"
+               alt="Moments of Solitude"
+               class="brand-logo">
+          <span class="brand-text">
+            <span class="brand-title">The ENIGMA OF ABSOLUTE TRUTH</span>
+            <span class="brand-subtitle">Stone Grill Reflections</span>
+          </span>
+        </a>
+
+        <div class="header-actions">
+          <button class="nav-toggle" type="button" aria-label="Toggle navigation" aria-expanded="false">
+            ☰
+          </button>
+
+          <div class="nav-buttons">
+            <button type="button" onclick="history.back()">HOME</button>
+            <button type="button" onclick="sharePage()">Share</button>
+            <button type="button" onclick="document.getElementById('reflectionAudio').scrollIntoView()">Audio</button>
+          </div>
+        </div>
       </div>
-    </a>
 
-    <div class="ref-actions">
-      <a class="ref-btn" href="/reflections/">Home</a>
-      <a class="ref-btn" href="/reflections/about/">About</a>
-      <a class="ref-btn" href="https://stonegrillresto.net" target="_blank">Stone Grill</a>
+      <!-- Center nav -->
+      <nav class="ref-nav" aria-label="Reflections navigation">
+        <ul>
+           <li><a href="/reflections/index.html">HOME</a></li>
+          <li><a href="/reflections/pages/divine-hiddeness/read.html">Divine Premise</a></li>
+          <li><a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a></li>
+          <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
+          <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
+          <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
+          <li><a href="/reflections/pages/transcendence/read.html" class="active">Transcendence</a></li>
+          <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
+          <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
+          <li><a href="/reflections/pages/belief/read.html">BELIEF AND GOODNESS</a></li>
+          <li><a href="/reflections/pages/question-label-sinner/read.html">Seeking Asurance is Labeled A Sinner</a></li>
+          <li><a href="/reflections/pages/initial-premise/read.html">The initial Premise of a Perfect Loving God</a></li>
+          <li><a href="/reflections/pages/diety/read.html">THE DEITY</a></li>
+          <li><a href="/reflections/pages/question-label-sinner/read.html">Labeled Sinner</a></li>
+          <li><a href="/reflections/pages/silent-influence/read.html">Silent Influence</a></li>
+          <li><a href="/reflections/pages/oneness-duality/read.html">Oneness Duality</a></li>
+          <li><a href="/reflections/pages/mirror-of-worship/read.html">The Mirror of Worship</a></li>
+        </ul>
+      </nav>
+
+      <!-- Right: page badge -->
+      <div class="ref-header-right">
+        <div class="current-page-badge">
+          <span class="page-icon">△</span>
+          <span class="page-label">TRANSCENDENCE</span>
+        </div>
+      </div>
     </div>
-  </div>
-</header>
+
+    <!-- Overlay (visual only) -->
+    <div class="nav-overlay"></div>
+  </header>
+
 
 <!-- ===== MAIN ===== -->
 <main class="ref-main">
 <article class="ref-article">
 
-  <!-- ===== COVER ===== -->
-  <section class="ref-hero">
-    <img
-      class="ref-hero-cover"
-      src="/reflections/pages/transcendence/transcendence.png"
-      alt="Unraveling the Enigma of Absolute Truth"
-      onerror="this.src='/reflections/assets/placeholder.jpg'">
 
-    <h1 class="ref-title">Unraveling the Enigma of Absolute Truth</h1>
+    <h1 class="ref-title">TRANSCENDENCE</h1>
     <p class="ref-subtitle">From Transcendence to Absolute Reality</p>
 
     <div class="ref-meta">
@@ -62,16 +507,35 @@
     </div>
   </section>
 
-  <!-- ===== AUDIO ===== -->
-  <section class="audio-wrap" id="audio">
-    <!-- audio-system.js reads this data attribute -->
-    <div
-      class="audio-player"
-      data-title="Unraveling the Enigma of Absolute Truth"
-      data-audio="/reflections/pages/transcendence/transcendence.mp3">
-    </div>
-  </section>
+ <!-- AUDIO PLAYER + PLAYLIST -->
+      <section class="audio-wrap">
+        <div class="audio-wrapper">
+          <audio id="reflectionAudio" controls preload="metadata">
+            <source id="audioSource" src="" type="audio/mpeg">
+            Your browser does not support the audio element.
+          </audio>
 
+          <div class="playlist">
+            <div class="playlist-row active"
+                 data-src="/reflections/pages/transcendence/transcendence.mp3">
+              <div class="playlist-main">
+                <div class="playlist-title">TRANSCNDENCE</div>
+                <div class="playlist-sub">Unwraveling the enigma of transcendence.</div>
+              </div>
+              <div class="playlist-duration">--:--</div>
+            </div>
+
+            <div class="playlist-row"
+                 data-src="/reflections/pages/the-inner-listener/prayer.mp3">
+              <div class="playlist-main">
+                <div class="playlist-title">The Prayer</div>
+                <div class="playlist-sub">A moment where you meet the real architect of your life.</div>
+              </div>
+              <div class="playlist-duration">--:--</div>
+            </div>
+          </div>
+        </div>
+      </section>
   <div class="ref-divider">— ❖ —</div>
 
   <!-- ===== INTRODUCTION ===== -->
