--- a/reflections/pages/the-inner-listener/read.html
+++ b/reflections/pages/the-inner-listener/read.html
@@ -18,7 +18,7 @@
 
   <!-- Main reflections styles -->
   <link rel="stylesheet" href="/reflections/assets/styles/reflections.css?v=15">
-
+  <link rel="icon" href="/reflections/assets/favicon.ico">
   <style>
     /* =========================
        GLOBAL FIXED HEADER
