--- a/reflections/pages/initial-premise/read.html
+++ b/reflections/pages/initial-premise/read.html
@@ -451,7 +451,7 @@
 
           <li><a href="/reflections/pages/belief/read.html">BELIEF AND GOODNESS</a></li>
           <li><a href="/reflections/pages/question-label-sinner/read.html">Seeking Asurance is Labeled A Sinner</a></li>
-          <li><a href="/reflections/pages/initial-premise/read.html">The initial Premise of a Perfect Loving God</a></li>
+          <li><a href="/reflections/pages/initial-premise/read.html" class="active">The initial Premise of a Perfect Loving God</a></li>
           <li><a href="/reflections/pages/diety/read.html">THE DEITY</a></li>
           <li><a href="/reflections/pages/question-label-sinner/read.html">Labeled Sinner</a></li>
           <li><a href="/reflections/pages/silent-influence/read.html">Silent Influence</a></li>
