--- a/reflections/pages/transcendence/read.html
+++ b/reflections/pages/transcendence/read.html
@@ -522,16 +522,17 @@
             </div>
 
             <div class="playlist-row"
-                 data-src="/reflections/pages/the-inner-listener/prayer.mp3">
+                 data-src="/reflections/pages/initial-premise/initial-premise.mp3">
               <div class="playlist-main">
-                <div class="playlist-title">The Prayer</div>
-                <div class="playlist-sub">A moment where you meet the real architect of your life.</div>
+                <div class="playlist-title">The Divine Premise</div>
+                <div class="playlist-sub">The Primacy of Moral Accountability. A Reflection on Will, Love, and Design.</div>
               </div>
               <div class="playlist-duration">--:--</div>
             </div>
           </div>
         </div>
       </section>
+      
   <div class="ref-divider">— ❖ —</div>
 
   <!-- ===== INTRODUCTION ===== -->
